<resources>
    <string name="app_name">IntelligenceSystemApp</string>
    <string name="str_ddn">达达鸟</string>
    <string name="str_hydl">欢迎登录</string>
    <string name="str_srsjh">输入手机号</string>
    <string name="str_xyb">下一步</string>
    <string name="str_dsfzhdl">第三方账号登录</string>
    <string name="str_qsrssnr">（附近）输入搜索内容</string>
    <string name="str_ss">搜索</string>
    <string name="str_ssls">搜索历史</string>
    <string name="str_rmbq">热门标签</string>
    <string name="str_qb">我的钱包</string>
    <string name="str_dd">我的订单</string>
    <string name="str_kf">联系客服</string>
    <string name="str_sz">我的设置</string>
    <string name="str_cwsj">成为商家</string>
    <string name="str_tjyj">推荐有奖</string>
    <string name="str_ptyh">普通用户</string>
    <string name="str_rzxy">入驻协议</string>
    <string name="str_rzsq">入驻申请</string>
    <string name="str_sq">商家</string>
    <string name="str_sd">商店</string>
    <string name="str_sp">商品</string>
    <string name="str_pj">评价</string>
    <string name="str_pssssz">配送方式设置</string>
    <string name="str_tjsp">添加商品</string>
    <string name="str_tjspyl">添加商品预览</string>
    <string name="str_gldd">管理订单</string>
    <string name="str_cydz">常用地址</string>
    <string name="str_glsd">管理商店</string>
    <string name="str_wdqb">我的钱包</string>
    <string name="str_yhk">银行卡</string>
    <string name="str_ye">余额</string>
    <string name="str_xjq">现金券</string>
    <string name="str_smrz">实名认证</string>
    <string name="str_zfsz">支付设置</string>
    <string name="str_cz">充值</string>
    <string name="str_tx">提现</string>
    <string name="str_jtyh">交通银行</string>
    <string name="str_xyk">信用卡</string>
    <string name="str_wdyhk">我的银行卡</string>
    <string name="str_mx">明细</string>
    <string name="str_zhmx">账户明细</string>
    <string name="str_yezh">余额账户（元）</string>
</resources>
