<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:src="@mipmap/ic_ss"
                app:layout_heightPercent="5.7%w"
                app:layout_widthPercent="5.7%w" />

            <com.junshan.pub.widget.ClearEditText
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/str_qsrssnr"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingLeft="@dimen/d10"
                android:paddingRight="@dimen/d10"
                android:textColor="@color/color_333333"
                android:textColorHint="@color/color_999999"
                android:textSize="@dimen/d14" />

            <TextView
                android:id="@+id/tv_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/view_white_bg"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/str_ss"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/d14" />

        </com.zhy.android.percent.support.PercentLinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_999999" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="@dimen/d15"
        android:layout_marginRight="@dimen/d15"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/str_ssls"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/d14" />

    <com.junshan.pub.widget.ZLayout
        android:id="@+id/zl_ssls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="@dimen/d15"
        android:layout_marginRight="@dimen/d15"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/str_rmbq"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/d14" />

    <com.junshan.pub.widget.ZLayout
        android:id="@+id/zl_rmbq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>