<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@mipmap/ic_ddn"
                    app:layout_heightPercent="8%w"
                    app:layout_widthPercent="8%w" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d10"
                    android:text="@string/str_ddn"
                    android:textColor="@color/color_292421"
                    android:textSize="@dimen/d17" />

            </com.zhy.android.percent.support.PercentLinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d20"
                android:layout_marginTop="50dp"
                android:text="@string/str_hydl"
                android:textColor="@color/black"
                android:textSize="@dimen/d26" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <com.junshan.pub.widget.ClearEditText
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/transparent"
                    android:hint="@string/str_srsjh"
                    android:inputType="number"
                    android:paddingLeft="@dimen/d10"
                    android:paddingRight="@dimen/d10"
                    android:textColor="@color/color_333333"
                    android:textColorHint="@color/color_999999"
                    android:textSize="@dimen/d14" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/color_0097d7" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="@dimen/d50"
                android:background="@drawable/selecter_blue"
                android:gravity="center"
                android:text="@string/str_xyb"
                android:textColor="@color/white"
                android:textSize="@dimen/d15" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d20"
                android:layout_marginRight="@dimen/d20"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.8dp"
                    android:layout_weight="1"
                    android:background="@color/color_e1e0e0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/str_dsfzhdl"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/d13" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.8dp"
                    android:layout_weight="1"
                    android:background="@color/color_e1e0e0" />
            </LinearLayout>

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_qq"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@mipmap/ic_qq"
                    app:layout_heightPercent="8.5%w"
                    app:layout_widthPercent="8.5%w" />

                <ImageView
                    android:id="@+id/iv_wx"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="40dp"
                    android:src="@mipmap/ic_wx"
                    app:layout_heightPercent="10%w"
                    app:layout_widthPercent="10%w" />
            </com.zhy.android.percent.support.PercentLinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>