<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/color_f0f0f0" />

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical">

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_f0f0f0"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/d15">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="50dp"
                    android:src="@mipmap/ic_user_defualt"
                    app:layout_heightPercent="25%w"
                    app:layout_widthPercent="25%w" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d10"
                    android:text="175****8654"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/d18" />

                <com.zhy.android.percent.support.PercentLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:src="@mipmap/ic_xing"
                        app:layout_heightPercent="6%w"
                        app:layout_widthPercent="6%w" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/str_ptyh"
                        android:textColor="@color/color_333333"
                        android:textSize="@dimen/d12" />
                </com.zhy.android.percent.support.PercentLinearLayout>

            </com.zhy.android.percent.support.PercentLinearLayout>


            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:paddingLeft="40dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@mipmap/ic_qb"
                    app:layout_heightPercent="7%w"
                    app:layout_widthPercent="7%w" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/str_qb"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/d15" />
            </com.zhy.android.percent.support.PercentLinearLayout>

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:paddingLeft="40dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@mipmap/ic_dd"
                    app:layout_heightPercent="8.5%w"
                    app:layout_widthPercent="8.5%w" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/str_dd"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/d15" />
            </com.zhy.android.percent.support.PercentLinearLayout>

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:paddingLeft="40dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@mipmap/ic_kefu"
                    app:layout_heightPercent="8%w"
                    app:layout_widthPercent="8%w" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/str_kf"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/d15" />
            </com.zhy.android.percent.support.PercentLinearLayout>

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:paddingLeft="40dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@mipmap/ic_setting"
                    app:layout_heightPercent="8%w"
                    app:layout_widthPercent="8%w" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/str_sz"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/d15" />
            </com.zhy.android.percent.support.PercentLinearLayout>
        </com.zhy.android.percent.support.PercentLinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/d15"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_heightPercent="16%w">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_sjrz" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/str_cwsj"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/d11" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d20"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_tjyj" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/str_tjyj"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/d11" />
            </LinearLayout>
        </LinearLayout>
    </com.zhy.android.percent.support.PercentLinearLayout>
</layout>