<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_00aa90"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/d20"
            android:paddingTop="@dimen/d20">

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_heightPercent="30%w">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@mipmap/ic_yhk"
                    app:layout_heightPercent="50%h"
                    app:layout_widthPercent="43%h" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d5"
                    android:text="@string/str_yhk"
                    android:textColor="@color/white"
                    android:textSize="@dimen/d13" />

            </com.zhy.android.percent.support.PercentLinearLayout>
            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_heightPercent="30%w">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@mipmap/ic_ye"
                    app:layout_heightPercent="50%h"
                    app:layout_widthPercent="43%h" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d5"
                    android:text="@string/str_ye"
                    android:textColor="@color/white"
                    android:textSize="@dimen/d13" />

            </com.zhy.android.percent.support.PercentLinearLayout>
            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_heightPercent="30%w">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@mipmap/ic_xjq"
                    app:layout_heightPercent="50%h"
                    app:layout_widthPercent="40%h" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d5"
                    android:text="@string/str_xjq"
                    android:textColor="@color/white"
                    android:textSize="@dimen/d13" />

            </com.zhy.android.percent.support.PercentLinearLayout>
        </com.zhy.android.percent.support.PercentLinearLayout>
    </LinearLayout>
</layout>