<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d15"
                android:layout_marginTop="@dimen/d30"
                android:text="@string/str_yezh"
                android:textColor="@color/white"
                android:textSize="@dimen/d12" />

            <TextView
                android:id="@+id/tv_yezh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/d30"
                android:layout_marginLeft="@dimen/d15"
                android:layout_marginTop="@dimen/d20"
                android:text="888.8"
                android:textColor="@color/white"
                android:textSize="@dimen/d38" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/d10"
            android:background="#eeeeee" />

        <com.zhy.android.percent.support.PercentLinearLayout
            android:id="@+id/ll_smrz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/view_white_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/d13"
                android:layout_marginRight="@dimen/d5"
                android:src="@mipmap/ic_cz2"
                app:layout_heightPercent="5%w"
                app:layout_widthPercent="5%w" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="@dimen/d20"
                android:paddingLeft="@dimen/d5"
                android:paddingTop="@dimen/d20"
                android:text="@string/str_cz"
                android:textColor="@color/color_666666"
                android:textColorHint="@color/color_999999"
                android:textSize="@dimen/d13" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginRight="@dimen/d13"
                android:src="@mipmap/ic_arrow_r"
                app:layout_heightPercent="3%w"
                app:layout_widthPercent="3%w" />
        </com.zhy.android.percent.support.PercentLinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#eeeeee" />

        <com.zhy.android.percent.support.PercentLinearLayout
            android:id="@+id/ll_zfsz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/view_white_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/d13"
                android:layout_marginRight="@dimen/d5"
                android:src="@mipmap/ic_tx2"
                app:layout_heightPercent="5.3%w"
                app:layout_widthPercent="5.3%w" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="@dimen/d20"
                android:paddingLeft="@dimen/d5"
                android:paddingTop="@dimen/d20"
                android:text="@string/str_tx"
                android:textColor="@color/color_666666"
                android:textColorHint="@color/color_999999"
                android:textSize="@dimen/d13" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginRight="@dimen/d13"
                android:src="@mipmap/ic_arrow_r"
                app:layout_heightPercent="3%w"
                app:layout_widthPercent="3%w" />
        </com.zhy.android.percent.support.PercentLinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#eeeeee" />
    </LinearLayout>
</layout>